Kubernetes/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    env: test
  name: nginx-test
  annotations:
    kubernetes.io/change-cause: "kubectl apply --filename nginx.yml --record=true"
    kubernetes.io/description: "This is a test deployment for nginx"      
    kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-test","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"nginx"}},"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"nginx","env":"test"}},"spec":{"containers":[{"image":"nginx","name":"nginx","resources":{}}]}}}}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
        env: test
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
