Kubernetes/pod-desc.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-04-28T07:29:22Z"
  generateName: tomcat-66fd5d684c-
  labels:
    app: myapp
    pod-template-hash: 66fd5d684c
  name: tomcat-66fd5d684c-fpkc5
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: tomcat-66fd5d684c
    uid: 43c186cd-7cff-4295-9a62-1b057aff7f3e
  resourceVersion: "81981"
  uid: b2e5cafc-b4dc-476d-9188-2a27bbfcd6e4
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-jj5bp
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: aks-nodepool1-29830130-vmss000000
  preemptionPolicy: PreemptLowerPriority
  priority: 1000
  priorityClassName: high-priority
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-jj5bp
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-04-28T07:35:28Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2025-04-28T07:34:17Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-04-28T07:35:28Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-04-28T07:35:28Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-04-28T07:34:17Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://48f729be7d3a78ebfd87b664ae5bfff991c2503eaf8eaaa55902635f05a39c51
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:5ed8fcc66f4ed123c1b2560ed708dc148755b6e4cbd8b943fab094f2c6bfa91e
    lastState: {}
    name: nginx
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-04-28T07:35:28Z"
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-jj5bp
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.224.0.5
  hostIPs:
  - ip: 10.224.0.5
  phase: Running
  podIP: 10.244.0.173
  podIPs:
  - ip: 10.244.0.173
  qosClass: BestEffort
  startTime: "2025-04-28T07:34:17Z"
