Kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  nodeName: aks-nodepool1-29830130-vmss000000
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 8080
